--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Run Valgrind Check With tools/xhttp
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 xhttp -dl github.com -v
 
+      - name: Run Valgrind Check With tools/xhost
+        run: sudo valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 xhost -a 11.11.11.11 -h test.com -v
+
       - name: Run Valgrind Check With tools/xjson
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 xjson -i ./examples/example.json -pl 2
 
