Fixed automated valgrind and feature test for xjson

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Run Valgrind Check With examples/files
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/files ./examples/files.c ./examples/files.copy
 
+      - name: Run Valgrind Check With examples/json
+        run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/json ./examples/example.json
+
       - name: Run Valgrind Check With examples/strings
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/strings
 
@@ -60,9 +63,6 @@ jobs:
 
       - name: Run Valgrind Check With examples/list
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/list
-
-      - name: Run Valgrind Check With examples/json
-        run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/json
 
       - name: Run Valgrind Check With examples/jwt
         run: valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./examples/build/jwt
