--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -25,8 +25,4 @@ jobs:
         cmake --version
 
     - name: Build with CMake
-      run: |
-        mkdir build
-        cd build
-        cmake ..
-        make
+      run: ./build.sh --examples --tools --install
