--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
         run: sudo apt-get install -y build-essential valgrind cmake libssl-dev
 
       - name: Install libxutils
-        run: ./build.sh --tool=cmake --examples --tools --install
+        run: ./build.sh --examples --tools --install
 
       - name: Check versions
         run: |
