--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Build with CMake
       run: |
-        mkdir build
+        mkdir -p build
         cd build
         cmake ..
         make
