Define GNU_SOURCE by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ ELSE()
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -Wall")
 ENDIF()
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_XUTILS_USE_GNU -D_ASSERT_TIMED")
+
 set(XUTILS_INSTALL_PREFIX "/usr/local")
 string(SUBSTRING "${XUTILS_INSTALL_PREFIX}" 0 2 PREFIX_START)
 
