Updated CFLAGS for MacOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 3.2.0 FATAL_ERROR)
 project(libxutils LANGUAGES C)
 
-IF (WIN32)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Od /W3")
-ELSE()
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -Wall")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_XUTILS_USE_GNU -D_ASSERT_TIMED")
-ENDIF()
+if (WIN32)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Od /W3")
+elseif(APPLE)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -Wall")
+else()
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -Wall -D_XUTILS_USE_GNU -D_ASSERT_TIMED")
+endif()
 
 set(XUTILS_INSTALL_PREFIX "/usr/local")
 string(SUBSTRING "${XUTILS_INSTALL_PREFIX}" 0 2 PREFIX_START)
