Better syntax highlight for xsearch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,7 @@ add_library(xutils STATIC
     ./src/sys/log.c
     ./src/sys/sig.c
     ./src/sys/xfs.c
-    ./src/sys/search.c
+    ./src/sys/srch.c
     ./src/sys/xtime.c
 )
 
