--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Update repository cache
+        run: sudo apt-get update
+
       - name: Install Dependencies
         run: sudo apt-get install -y build-essential valgrind cmake libssl-dev
 
